# brightspace_downloader

./: .dockerignore  .gitignore  README.md  courses.json  drive_upload.py  dropbox_upload.py  main.py  pyproject.toml  requirements.txt
