[tool.poetry]
name = "brightspace_downloader"
version = "0.1.0"
description = ""
authors = ["Terje Espedal <terje.m.espedal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
python-dotenv = "^0.19.0"
PyDrive = "^1.3.1"
dropbox = "^11.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
