[tool.poetry]
name = "brightspace_downloader"
version = "0.1.0"
description = ""
authors = ["Terje Espedal <terje.m.espedal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
